--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                             >Открыть на карте</a
                         >
                     </div>
-                    <p>Пролетарская 87В</p>
+                    <p>
+                        Пролетарская 87В <br /><br />
+                        Сабуров Холл, 1 этаж, зал «Биркин»
+                    </p>
                 </div>
             </div>
         </section>
