--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     если вместо цветов вы решите сделать вклад в&nbsp;наши будущие путешествия
                     в&nbsp;виде сертификата:
                 </p>
-                <a href="https://ctravl.com/?yclid=9208493966959837183">Coraltravel</a>
+                <a href="https://travelcards.ru">Coraltravel</a>
             </div>
         </section>
         <section class="form">
